# bot-rs-core

./: Cargo.toml  README.md  build.rs
.github/: grcov.yml
.github/workflows/: bench.yml  rust.yml
core/: Cargo.toml  build.rs
core/src/: auth.rs  command_access.rs  lib.rs  plugin.rs  plugins.rs
core/src/twitch_api/: auth.rs  follows.rs  twitch_oauth.html  users.rs
core/src/utils/: mod.rs
core_derive/: Cargo.toml
core_derive/src/: lib.rs
dev/bench/: data.js
src/: auth.rs  command_access.rs  context.rs  lib.rs  plugin.rs  plugins.rs  profile.rs
src/config/: command_access.rs  commands.rs  mod.rs  plugins.rs  profile.rs
src/twitch_api/: auth.rs  follows.rs  mod.rs  users.rs
src/twitch_extensions/: irc.rs
src/twitch_extensions/irc/: mod.rs  privmsg.rs
src/utils/: mod.rs
