[package]
name = "bot-rs-core"
version = "0.3.0"
authors = ["mo_blaa <moblaa@gmx.net>"]
edition = "2018"
repository = "https://github.com/MoBlaa/bot-rs-core.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irc-rust = "0.2.1"
libloading = "0.6.2"
log = "0.4.8"
url = "2.1.1"
rand = "0.7.3"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
reqwest = { version = "0.10.4", features = ["default", "json"] }
tokio = { version = "0.2.21", features = ["full"] }
rocket = "0.4.5"
chrono = { version = "0.4.11", features = ["serde"] }
dirs-next = "1.0.0"
regex = "1.3.9"
hyper = "0.13.6"
futures = "0.3.5"
async-trait = "0.1.35"

[dev-dependencies]
bot-rs-core-derive = { path = "core_derive" }

[build-dependencies]
rustc_version = "0.2.3"
dotenv = "0.15.0"
