[package]
name = "bot-rs-core"
version = "0.4.0"
authors = ["mo_blaa <moblaa@gmx.net>"]
edition = "2018"
repository = "https://github.com/MoBlaa/bot-rs-core.git"

[features]
default = []
plugin-loader = ["rocket"]
twitch-api = ["chrono", "rocket", "url", "reqwest"] # This may be better exported to a separate package
derive = ["bot-rs-core-derive"]

[dependencies]
irc-rust = "0.2.1"
async-trait = "0.1.40"
futures = "0.3.5"
libloading = "0.6.2"
log = "0.4.8"
rand = "0.7.3"
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
dirs-next = "1.0.0"
regex = "1.3.9"
# Has to be present in order to use vendored openssl version
openssl = { version = "0.10.30", features = ["vendored"] }

url = { version = "2.1.1", optional = true }
reqwest = { version = "0.10.4", features = ["default", "json"], optional = true }
rocket = { version = "0.4.5", optional = true }
chrono = { version = "0.4.11", features = ["serde"], optional = true }
hyper = { version = "0.13.6", optional = true }
bot-rs-core-derive = { path = "core_derive", optional = true }

[dev-dependencies]
bot-rs-core-derive = { path = "core_derive" }
tokio = { version = "0.2.22", features = ["full"] }

[build-dependencies]
rustc_version = "0.2.3"
dotenv = "0.15.0"
