[package]
name = "bot-rs-core"
version = "0.4.3"
authors = ["mo_blaa <mo.blaa@pm.me>"]
edition = "2018"
repository = "https://github.com/MoBlaa/bot-rs-core.git"
description = "Core library for implementing plugins and plugin-loaders for chatbots"
license = "MIT"
keywords = ["twitch", "chatbot"]
categories = ["web-programming"]
publish = true
readme = "README.md"

[features]
default = []
plugin-loader = ["rocket", "tokio"]
twitch-api = ["chrono", "rocket", "url", "reqwest"] # This may be better exported to a separate package
derive = ["bot-rs-core-derive"]

[dependencies]
irc-rust = { version = "0.3.2", features = ["serde"] }
async-trait = "0.1.41"
futures = "0.3.5"
libloading = "0.6.2"
log = "0.4.8"
rand = "0.7.3"
dirs-next = "1.0.0"
regex = "1.3.9"
# Has to be present in order to use vendored openssl version
openssl = { version = "0.10.30", features = ["vendored"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"

url = { version = "2.1.1", optional = true }
reqwest = { version = "0.10.4", features = ["default", "json"], optional = true }
rocket = { version = "0.4.5", optional = true }
chrono = { version = "0.4.19", features = ["serde"], optional = true }
hyper = { version = "0.13.8", optional = true }
bot-rs-core-derive = { path = "core_derive", optional = true }
tokio = { version = "0.2", features = ["rt-core"], optional = true}
derive_more = "0.99.11"

[dev-dependencies]
bot-rs-core-derive = { path = "core_derive" }
tokio = { version = "0.2.22", features = ["full"] }

[build-dependencies]
rustc_version = "0.2.3"
dotenv = "0.15.0"
