[package]
name = "bot-rs-core-derive"
version = "0.1.1"
authors = ["mo_blaa <moblaa@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.31"
quote = "1.0.7"

[dev-dependencies]
async-trait = "0.1.35"
bot-rs-core = { path = "../" }
