[package]
name = "bot-rs-core-derive"
version = "0.4.3"
authors = ["mo_blaa <mo.blaa@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.42"
quote = "1.0.7"

[dev-dependencies]
async-trait = "0.1.41"
bot-rs-core = "0.4.3"
